# simons-obsidian-plugin

./: .eslintrc  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  LINTING.md  README.md  esbuild.config.mjs  main.ts  manifest.json  package.json  shell.nix  styles.css  tsconfig.json  vector_plan.md
.agent-os/specs/2025-10-20-hover-tooltip-display/: tasks.md
.direnv/: nix-profile-25.05-csfywra6032psdbg  nix-profile-25.05-csfywra6032psdbg.rc
.husky/: pre-commit
rust/: Cargo.toml  rustfmt.toml
rust/.cargo/: config.toml
rust/src/: adjacency_matrix.rs  commands.rs  dimensionality_reduction.rs  error.rs  lib.rs  settings.rs  utils.rs  vector_ops.rs  vector_source.rs
rust/tests/: adjacency_matrix_test.rs  commands_test.rs  dimensionality_reduction_test.rs  settings_test.rs  utils_test.rs  vector_ops_test.rs
rust/tests/snapshots/: adjacency_matrix_test__adjacency_matrix_basic.snap  adjacency_matrix_test__adjacency_matrix_multiple_links.snap  adjacency_matrix_test__adjacency_matrix_no_links.snap  adjacency_matrix_test__adjacency_matrix_self_links.snap  dimensionality_reduction_test__svd_reduction_3d_to_2d.snap  vector_ops_test__kmeans_clustering_deterministic.snap  vector_ops_test__normalize_vectors_snapshot.snap
src/visualization/: ColorSchemes.ts  VectorDataManager.ts  VectorVisualizationView.ts  types.ts
src/visualization/providers/: AdjacencyMatrixProvider.ts  EmbeddingSourceProvider.ts  VectorSourceProvider.ts
